--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://firstblog.github.io
+url: https://RichardHzp.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -79,5 +79,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/RichardHzp/firstblog.github.io.git
+  repo: https://github.com/RichardHzp/RichardHzp.github.io.git
   branch: master
